<resources>
    <string name="app_name">Weather Forecast:</string>
    <string name="key">f27e570b2e9a73607f080159fe8c117f</string>
    <string name="lang">ru</string>
    <string name="path_for_download_icon">http://openweathermap.org/img/wn/</string>
    <string name="wind_speed">Скорость ветра:</string>
    <string name="wind_degree">Направление ветра:</string>
    <string name="pressure">Давление:</string>
    <string name="mm_Hg">мм рт. ст.</string>
    <string name="humidity">Влажность:\t</string>
    <string name="clouds">Облачность: </string>
    <string name="visibility">Видимость:</string>
    <string name="probably_of_precipitation">Вероятность\n осадков:</string>
    <string name="dew_point">Точка росы:</string>
    <string name="ultraviolet_index">Индекс ультрафиолета:</string>
    <string name="sunrise">Восход солнца:</string>
    <string name="sunset">Заход солнца:</string>
    <string name="moonrise">Восход луны:</string>
    <string name="moonset">Заход луны:</string>
    <string name="moon_phase">Фаза луны:</string>
    <string name="n">С</string>
    <string name="ne">СВ</string>
    <string name="e">В</string>
    <string name="se">ЮВ</string>
    <string name="s">Ю</string>
    <string name="sw">ЮЗ</string>
    <string name="w">З</string>
    <string name="nw">СЗ</string>
    <string name="celsius_symbol">°C</string>
    <string name="meter_sec">м/с</string>
    <string name="meter">м</string>
    <string name="wind">Ветер:</string>
    <string name="temperature">Температура:</string>
    <string name="alert_sender">Информация от:</string>
    <string name="alert_event">Ожидается:</string>
    <string name="alert_start">С:</string>
    <string name="alert_end">По:</string>
    <string name="updating_forecast">Обновление прогноза</string>
    <string name="once_an_hour">Каждый час.</string>
    <string name="every_three_hours">Раз в три часа.</string>
    <string name="every_five_hours">Раз в пять часов.</string>
    <string name="once_a_day">Раз в сутки.</string>
    <string name="to_exit_toast">Для выхода, нажмите повторно.</string>
    <string name="mon">Пн</string>
    <string name="tue">Вт</string>
    <string name="wed">Ср</string>
    <string name="thu">Чт</string>
    <string name="fri">Пт</string>
    <string name="sat">Сб</string>
    <string name="sun">Вс</string>
</resources>